Adjust loglevels to display signal server messages

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,4 +10,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 log4j.logger.com.ning.http.client.providers.netty.NettyAsyncHttpProvider=INFO
 log4j.logger.com.zipwhip.important=INFO
 log4j.logger.org.java_websocket=WARN
-log4j.logger.io.socket=WARN
+log4j.logger.io.socket=INFO
