--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <groupId>com.zipwhip</groupId>
     <artifactId>zipwhip-api-example</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
