--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,9 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.logger.com.ning.http.client.providers.netty.NettyAsyncHttpProvider=INFO
+log4j.logger.com.ning.http.client.providers.netty=INFO
 log4j.logger.com.zipwhip.important=INFO
+log4j.logger.com.zipwhip.api.signals.SignalProviderImpl=INFO
+log4j.logger.com.zipwhip.api.signals.SignalObserver=INFO
 log4j.logger.org.java_websocket=WARN
 log4j.logger.io.socket=INFO
