--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,13 @@
         <dependency>
             <groupId>com.zipwhip</groupId>
             <artifactId>zipwhip-api</artifactId>
-            <version>1.3.1-SNAPSHOT</version>
+            <version>2.0.2-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.2</version>
         </dependency>
     </dependencies>
 
